@@ -23,6 +23,7 @@ Bug: Dropping first box on Heightfield is wrong.
 
 0.5.0 (unreleased)
 =====
+- Added DQuaternion.copy() and dot() [#117](https://github.com/tzaeschke/ode4j/pull/117)
 - Added factory methods and missing API for DRagdoll, DConstrainedBallJoint and DTrimeshHeightfield.
   [#24](https://github.com/tzaeschke/ode4j/issues/24)
 - Removed linter warnings when compiling with Java 17. [#116](https://github.com/tzaeschke/ode4j/pull/116)
